--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-dropzone": "^14.2.3",
     "react-pdf": "^7.4.0",
     "react-resize-detector": "^9.1.0",
     "tailwind-merge": "^1.14.0",
