AuthError, FileDropzone component & sharp added

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 NEON_DATABASE_URL=postgres://postgres:postgres@localhost/documentor-db?sslmode=require
 
+# crypto.randomBytes(64).toString("hex")
+NEXTAUTH_SECRET=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
