--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dropzone": "^14.2.3",
     "react-pdf": "^7.4.0",
     "react-resize-detector": "^9.1.0",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.2"
