--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# AWS S3
+NEXT_PUBLIC_AWS_ACCESS_KEY=
+NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=
+NEXT_PUBLIC_AWS_S3_REGION=
+NEXT_PUBLIC_AWS_S3_BUCKET=
