--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ NEXT_PUBLIC_AWS_ACCESS_KEY=
 NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=
 NEXT_PUBLIC_AWS_S3_REGION=
 NEXT_PUBLIC_AWS_S3_BUCKET=
+
+# tier
+TIER_FREE_FILE_SIZE_LIMIT=10485760  # 10*1024*1024 = 10MB
+TIER_PREMIUM_FILE_SIZE_LIMIT=262144000  # 250*1024*1024 = 250MB
