--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ NEXT_PUBLIC_AWS_S3_BUCKET=
 # tier
 TIER_FREE_FILE_SIZE_LIMIT=10485760  # 10*1024*1024 = 10MB
 TIER_PREMIUM_FILE_SIZE_LIMIT=262144000  # 250*1024*1024 = 250MB
+
+# pinecone 
+PINECONE_DATABASE_ENVIRONMENT=
+PINECONE_DATABASE_API_KEY=
