--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.3",
     "@neondatabase/serverless": "^0.6.0",
+    "@pinecone-database/pinecone": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "1.0.4",
