file read from S3 & documents Splitter added

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ TIER_PREMIUM_FILE_SIZE_LIMIT=262144000  # 250*1024*1024 = 250MB
 # pinecone 
 PINECONE_DATABASE_ENVIRONMENT=
 PINECONE_DATABASE_API_KEY=
+
+# temporary file dir 
+TEMPORARY_FILE_DIR=/temp
