--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.3",
     "@neondatabase/serverless": "^0.6.0",
+    "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -28,13 +29,16 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "formik": "^2.4.5",
+    "langchain": "^0.0.166",
     "lucide-react": "^0.279.0",
     "next": "latest",
     "next-auth": "^4.23.2",
+    "pdf-parse": "^1.1.1",
     "react": "latest",
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
     "react-pdf": "^7.4.0",
+    "react-query": "^3.39.3",
     "react-resize-detector": "^9.1.0",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
