--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ TIER_PREMIUM_FILE_SIZE_LIMIT=262144000  # 250*1024*1024 = 250MB
 # pinecone 
 PINECONE_DATABASE_ENVIRONMENT=
 PINECONE_DATABASE_API_KEY=
+PINECONE_DATABASE_INDEX_NAME=
+
+# openai
+OPENAI_API_KEY=
 
 # temporary file dir 
 TEMPORARY_FILE_DIR=/temp
