--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.279.0",
     "next": "latest",
     "next-auth": "^4.23.2",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "latest",
     "react-dom": "latest",
@@ -46,6 +47,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.3",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
