--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-pdf/renderer": "^3.1.12",
     "ai": "^2.2.27",
     "aws-sdk": "^2.1472.0",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -32,7 +32,7 @@
     "formik": "^2.4.5",
     "langchain": "^0.0.166",
     "lucide-react": "^0.279.0",
-    "next": "latest",
+    "next": "^14.0.4",
     "next-auth": "^4.23.2",
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
